--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       [
         "bash",
         "-c",
-        "#{os == 'windows' ? './configure --prefix=$cur__install --host x86_64-w64-mingw32 --disable-dependency-tracking' : './configure --prefix=$cur__install --disable-dependency-tracking'}"
+        "#{os == 'windows' ? 'bash ./configure --prefix=$cur__install --host x86_64-w64-mingw32 --disable-dependency-tracking' : 'bash ./configure --prefix=$cur__install --disable-dependency-tracking'}"
       ],
       [
         "make"
